# multitarget-tracking

./: .gitignore  CMakeLists.txt  LICENSE.txt  Licence.txt  README.md
data/: INRIA_Model_weights.csv
data/LR_Mars_Model/: Model_bias.csv  Model_maxs.csv  Model_means.csv  Model_mins.csv  Model_stds.csv  Model_weights.csv  bias.csv  maxs.csv  means.csv  weights.csv
data/det/2DMOT2015/test/: ETH-Crossing.txt  ETH-Jelmoli.txt  ETH-Linthescher.txt  KITTI-16.txt  TUD-Crossing.txt  Venice-1.txt
data/det/2DMOT2015/train/: ETH-Pedcross2.txt  ETH-Sunnyday.txt  KITTI-13.txt  KITTI-17.txt  TUD-Campus.txt  TUD-Stadtmitte.txt
data/det/MOT16/test/: MOT16-01.txt
data/det/MOT16/train/: MOT16-05.txt
data/model_MARS/: bias.csv  mins.csv  stds.csv  weights.csv
scripts/: 2DMOT2015  MOT16  cnn_results.txt  data  evaluation_gm_phd.sh  public_results.txt  results.txt  run.sh  run_mtt  run_mtt_dpp  run_mtt_phd  run_mtt_phd_pets  run_mtt_phd_pf  run_no_predetections  run_with_predetections  start_dpp  start_dpp.sh  start_dpp_mot.sh  start_dpp_mot15.sh  start_dpp_mot16.sh  start_dpp_pets  start_dpp_pets.sh  start_gm.sh  start_gm_phd.sh  start_lr_detector.sh  start_pedestrian.sh  start_phd  start_phd.sh  start_phd_mot15.sh  start_phd_mot16.sh  start_phd_pets  start_phd_pets.sh  start_yolo.sh  start_yolo_nms.sh  start_yolo_phd.sh  test_dpp.sh  test_dpp_pets.sh  test_gm.sh  test_gm_phd.sh  test_lr_detector.sh  (+5 more)
src/: dpp.cpp  dpp.hpp  em.cpp  em.hpp  mtt.cpp  mtt.hpp  mtt_dpp.cpp  mtt_dpp.hpp  mtt_phd_pf.cpp  mtt_phd_pf.hpp  test_dpp.cpp  test_dpp.hpp  test_dpp_pets.cpp  test_dpp_pets.hpp  test_gm_phd.cpp  test_gm_phd.hpp  test_lr_detector.cpp  test_lr_detector.hpp  test_pedestrian.cpp  test_pedestrian.hpp  test_phd.cpp  test_phd.hpp  test_phd_pets.cpp  test_phd_pets.hpp  test_yolo.cpp  test_yolo.hpp  test_yolo_dpp.cpp  test_yolo_nms.cpp  test_yolo_webcam.cpp  test_yolo_webcam.hpp
src/detectors/: CPU_LR_hog_detector.cpp  CPU_LR_hog_detector.hpp  cuda_hog_detector.cpp  cuda_hog_detector.hpp  cuda_hog_detector.hpp~  hog_detector.cpp  hog_detector.hpp  yolo_detector.cpp  yolo_detector.hpp
src/dpp/: dpp.cpp  dpp.hpp
src/features/: haar.cpp
src/libs/libhungarian/: hungarian.c  hungarian.h  hungarian_test.c
src/libs/nms/: nms.hpp
src/likelihood/: CPU_logistic_regression.cpp  CPU_logistic_regression.hpp  gaussian.cpp  logistic_regression.cpp  logistic_regression.hpp  multivariate_gaussian.cpp
src/models/: particle_filter.cpp  particle_filter.hpp  phd_gaussian_mixture.cpp  phd_gaussian_mixture.hpp  phd_particle_filter.cpp  phd_particle_filter.cpp.backup.cpp  phd_particle_filter.hpp  phd_particle_filter.hpp.backup.hpp
src/utils/: assignment.cpp  assignment.hpp  c_utils.cpp  cnn_reader.cpp  cnn_reader.hpp  image_generator.cpp  image_generator.hpp  sequential_image_generator.cpp  sequential_image_generator.hpp  utils.cpp  utils.hpp
